--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "quave-check": "npm run quave-eslint && npm run quave-prettier"
   },
   "dependencies": {
-    "@babel/runtime": "^7.24.7",
+    "@babel/runtime": "^7.25.0",
     "meteor-node-stubs": "^1.2.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
@@ -22,11 +22,12 @@
   "devDependencies": {
     "@quave/eslint-config-quave": "^3.0.0-beta.0",
     "@types/meteor": "^2.9.8",
-    "autoprefixer": "^10.4.19",
+    "autoprefixer": "^10.4.20",
+    "daisyui": "^4.12.10",
     "eslint": "^8.57.0",
-    "lefthook": "^1.6.18",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.4"
+    "lefthook": "^1.7.12",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.9"
   },
   "eslintConfig": {
     "extends": [
