--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.25.0",
+    "classnames": "^2.5.1",
     "meteor-node-stubs": "^1.2.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
